<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharSelect">


    <ImageView
        android:id="@+id/iv_tf2"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/tf2" />

    <TextView
        android:id="@+id/tv_ticTacToe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_tf2"
        android:layout_centerHorizontal="true"
        android:text="@string/tic_tac_toe"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/orange"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tv_choose"
        android:layout_below="@id/tv_ticTacToe"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/iw_engie"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:srcCompat="@drawable/engineer" />

            <ImageView
                android:id="@+id/iw_demoman"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/demoman" />

            <ImageView
                android:id="@+id/iw_heavy"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:srcCompat="@drawable/heavy" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/iw_spy"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:srcCompat="@drawable/spy" />

            <ImageView
                android:id="@+id/iw_medic"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/medic" />

            <ImageView
                android:id="@+id/iw_soldier"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:srcCompat="@drawable/soldier" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/iw_scout"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:srcCompat="@drawable/scout" />

            <ImageView
                android:id="@+id/iw_sniper"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/sniper" />

            <ImageView
                android:id="@+id/iw_pyro"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:srcCompat="@drawable/pyro" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomLayout"
        android:layout_marginBottom="10dp"
        android:text="@string/choose"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/orange"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textColor="@color/blue"
            android:text="@string/p1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:text="@string/vs"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>

        <TextView

            android:id="@+id/player2"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/red"
            android:text="@string/p2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />
    </RelativeLayout>


</RelativeLayout>